# ProjetIF2B

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  select.c
.github/workflows/: cmake-multi-platform.yml
src/: board.c  board.h  capture.c  capture.h  game_state.c  game_state.h  main.c  piece.c  piece.h  piece_count_tracker.c  piece_count_tracker.h  player.c  player.h  print.c  print.h  save.c  save.h  select.c  select.h
